js/js.translator/testData/incremental/invalidation/inlineFunctionWithObject/main/m.kt
fun box(stepId: Int): String {
    if (foo().doAnything() != stepId) {
        return "Fail"
    }
    return "OK"
}
